web-site/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-site-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-site-frontend
  template:
    metadata:
      labels:
        app: web-site-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/week-book/web-site-frontend
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
          imagePullPolicy: IfNotPresent
