web-site/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-site-frontend
spec:
  type: ClusterIP
  selector:
    app: web-site-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
